unpackaged/main/default/objects/n2de__Team__c/n2de__Team__c.object-meta.xml
<CustomObject>
    <description>Teams</description>
    <label>Distribution Team</label>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>