unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Actions_respect_distribution_hours__c.field-meta.xml
<CustomField>
    <fullName>n2de__Actions_respect_distribution_hours__c</fullName>
    <inlineHelpText>Distribution hours that will be respected when calculating time to action.</inlineHelpText>
    <label>Tracking respects distribution hours</label>
    <length>20</length>
    <type>Text</type>
</CustomField>