unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Active_cap_and_balance_by__c.field-meta.xml
<CustomField>
    <fullName>n2de__Active_cap_and_balance_by__c</fullName>
    <defaultValue>&#39;Record Count&#39;</defaultValue>
    <inlineHelpText>For load balancing or active caps, use the count of records assigned, or the total value of those records</inlineHelpText>
    <label>Active cap and balance by</label>
    <length>20</length>
    <type>Text</type>
</CustomField>