unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Alert_respect_distribution_hours__c.field-meta.xml
<CustomField>
    <fullName>n2de__Alert_respect_distribution_hours__c</fullName>
    <inlineHelpText>Distribution hours that will be respected when calculating alert periods.</inlineHelpText>
    <label>Respect distribution hours</label>
    <length>10</length>
    <type>Text</type>
</CustomField>