unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Alert_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Alert_type__c</fullName>
    <inlineHelpText>Type of alert functionality to use for this team</inlineHelpText>
    <label>Alert type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time Period</fullName>
                <default>true</default>
                <label>Time Period</label>
            </value>
            <value>
                <fullName>Custom Date/Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>