unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Assign_to_field__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assign_to_field__c</fullName>
    <inlineHelpText>Select a user lookup field to use for DE assignment. Defaults to Owner.</inlineHelpText>
    <label>Assign to field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>