unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Auto_action_event_type_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Auto_action_event_type_field_name__c</fullName>
    <inlineHelpText>A field on the Event object that contains an event type</inlineHelpText>
    <label>Event type field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>