unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Auto_action_task_type_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Auto_action_task_type_field_name__c</fullName>
    <inlineHelpText>A field on the Task object that contains a task type</inlineHelpText>
    <label>Task type field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>