unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Auto_action_value__c.field-meta.xml
<CustomField>
    <fullName>n2de__Auto_action_value__c</fullName>
    <inlineHelpText>Value to set the tracked field to on auto-action</inlineHelpText>
    <label>Auto action value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>