unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Capping_pattern__c.field-meta.xml
<CustomField>
    <fullName>n2de__Capping_pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capping pattern</label>
    <referenceTo>n2de__Capping_Pattern__c</referenceTo>
    <relationshipLabel>Distribution Teams</relationshipLabel>
    <relationshipName>Distribution_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>