unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Distributed_record_value_field__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distributed_record_value_field__c</fullName>
    <inlineHelpText>Name of the field on the distributed record that relates to that record&#39;s value</inlineHelpText>
    <label>Value field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>