unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Distribution_hours__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The selected shift pattern (distribution hours) this team is assigned to</inlineHelpText>
    <label>Distribution hours</label>
    <referenceTo>n2de__Distribution_hours__c</referenceTo>
    <relationshipLabel>Distribution teams</relationshipLabel>
    <relationshipName>Distribution_teams</relationshipName>
    <type>Lookup</type>
</CustomField>