unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Enable_assignment_rejection__c.field-meta.xml
<CustomField>
    <fullName>n2de__Enable_assignment_rejection__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allow users to reject DE assignments if they are unsuitable or incorrectly assigned</inlineHelpText>
    <label>Enable assignment rejection</label>
    <type>Checkbox</type>
</CustomField>