unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Event_types_to_action__c.field-meta.xml
<CustomField>
    <fullName>n2de__Event_types_to_action__c</fullName>
    <inlineHelpText>New events of the selected types will cause the next action to be automatically completed on the related lead or case object.</inlineHelpText>
    <label>Event types to auto-action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>