unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>n2de__Execution_Order__c</fullName>
    <description>Order of execution for the team.</description>
    <inlineHelpText>Order of execution for the team.</inlineHelpText>
    <label>Execution Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>