unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Holiday_Group__c.field-meta.xml
<CustomField>
    <fullName>n2de__Holiday_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The holiday region that determines which company holidays this team subscribes to</inlineHelpText>
    <label>Holiday Region</label>
    <referenceTo>n2de__Holiday_group__c</referenceTo>
    <relationshipLabel>Distribution teams</relationshipLabel>
    <relationshipName>Distribution_teams</relationshipName>
    <type>Lookup</type>
</CustomField>