unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Is_action_tracking__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_action_tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked will enable the ability to track actions on Leads and Cases</inlineHelpText>
    <label>Time to Action</label>
    <type>Checkbox</type>
</CustomField>