unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Is_alert__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, will enable the creation of SLAs, based upon a time period and condition.</inlineHelpText>
    <label>SLAs</label>
    <type>Checkbox</type>
</CustomField>