unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Is_auto_action_on_task__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_auto_action_on_task__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When a new task is created on a lead or case distributed for this Team, it will cause the first/initial action to be automatically completed.</inlineHelpText>
    <label>Auto-action on task enabled</label>
    <type>Checkbox</type>
</CustomField>