unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Is_distribute_to_queue__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_distribute_to_queue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to enable team to distribute to queues, instead of users.</inlineHelpText>
    <label>Distribute to queue</label>
    <type>Checkbox</type>
</CustomField>