unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Is_forced_load_balance_reset__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_forced_load_balance_reset__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is a forced reset of the load balanced values of all team members required? This will usually happen when switching between load balancing by count and record value</inlineHelpText>
    <label>Is load balanced reset required</label>
    <type>Checkbox</type>
</CustomField>