unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Is_logging_disabled__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_logging_disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, logging of distributions will be disabled for this team</inlineHelpText>
    <label>Distribution logging disabled</label>
    <type>Checkbox</type>
</CustomField>