unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Is_object_sync_enabled__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_object_sync_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable post-assignment object sync</label>
    <type>Checkbox</type>
</CustomField>