unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Is_Person_Accounts__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_Person_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assign only Accounts of type Person Account</description>
    <inlineHelpText>Assign only Accounts of type Person Account</inlineHelpText>
    <label>Is Person Accounts</label>
    <type>Checkbox</type>
</CustomField>