unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Is_shift_planner_enabled__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_shift_planner_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked the team will use the Shift Planner rather than team or individual distribution hours</inlineHelpText>
    <label>Use Shift Planner</label>
    <type>Checkbox</type>
</CustomField>