unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Is_team_level_round_robin__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_team_level_round_robin__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, this team uses team-level round robin order.</inlineHelpText>
    <label>Use team level round-robin</label>
    <type>Checkbox</type>
</CustomField>