unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Is_team_managers_enabled__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_team_managers_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled only the specified team managers are able to see the team</inlineHelpText>
    <label>Specified team managers enabled</label>
    <type>Checkbox</type>
</CustomField>