unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Is_triggers_respect_distribution_hours__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_triggers_respect_distribution_hours__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, trigger distributors will respect distribution hours and assign to the default owner when no team members are available.</inlineHelpText>
    <label>Triggers respect distribution hours</label>
    <type>Checkbox</type>
</CustomField>