unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Load_balancing_duration__c.field-meta.xml
<CustomField>
    <fullName>n2de__Load_balancing_duration__c</fullName>
    <label>Load balancing type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>