unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Object_action_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object_action_field_name__c</fullName>
    <inlineHelpText>The selected field to be used for actions</inlineHelpText>
    <label>Action field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>