unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Object_action_tracked_value__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object_action_tracked_value__c</fullName>
    <inlineHelpText>Actions that will be tracked, from the time of distribution to the time the action status was updated on the case or lead.</inlineHelpText>
    <label>Action to track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>