unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Object_active_status_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object_active_status_field_name__c</fullName>
    <inlineHelpText>The selected object field that determines whether a record is &quot;active&quot;.</inlineHelpText>
    <label>Active status field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>