unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Object_active_status_values_long__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object_active_status_values_long__c</fullName>
    <description>A semicolon delimited list of &quot;active&quot; values</description>
    <inlineHelpText>Selected picklist values that denote that an object is &quot;active&quot;.</inlineHelpText>
    <label>Active status values</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>