unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Object_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object_name__c</fullName>
    <inlineHelpText>Name of the object to be distributed to members of this team.</inlineHelpText>
    <label>Object</label>
    <length>60</length>
    <type>Text</type>
</CustomField>