unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Object_team_filter_soql__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object_team_filter_soql__c</fullName>
    <label>Team filter soql</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>