unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Object_team_filter_ui_config__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object_team_filter_ui_config__c</fullName>
    <label>Team filter ui config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>