unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Performance_date_range__c.field-meta.xml
<CustomField>
    <fullName>n2de__Performance_date_range__c</fullName>
    <defaultValue>&#39;LAST_WEEK&#39;</defaultValue>
    <description>Date literal for the period to use for calculating team performance metrics</description>
    <inlineHelpText>Date literal</inlineHelpText>
    <label>Performance date range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>