unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Rejection_request_limit__c.field-meta.xml
<CustomField>
    <fullName>n2de__Rejection_request_limit__c</fullName>
    <inlineHelpText>Limit the number of rejections a user can request per day</inlineHelpText>
    <label>Rejection request limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>