unpackaged/main/default/objects/n2de__Team__c/fields/n2de__SLAs_respect_active_status__c.field-meta.xml
<CustomField>
    <fullName>n2de__SLAs_respect_active_status__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>SLAs will only apply to records that are active.</inlineHelpText>
    <label>SLAs respect active status</label>
    <type>Checkbox</type>
</CustomField>