unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Task_types_to_action__c.field-meta.xml
<CustomField>
    <fullName>n2de__Task_types_to_action__c</fullName>
    <inlineHelpText>New tasks of the selected types will cause the next action to be automatically completed on the related lead or case object.</inlineHelpText>
    <label>Task types to auto-action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>