unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Team_level_caps_enabled__c.field-meta.xml
<CustomField>
    <fullName>n2de__Team_level_caps_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable team-level capping for this team.</inlineHelpText>
    <label>Team level caps enabled</label>
    <type>Checkbox</type>
</CustomField>