unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Team_manager_users__c.field-meta.xml
<CustomField>
    <fullName>n2de__Team_manager_users__c</fullName>
    <inlineHelpText>The user ids of the specified team managers able to access the team</inlineHelpText>
    <label>Specified team managers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>