unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Team_runtime__c.field-meta.xml
<CustomField>
    <fullName>n2de__Team_runtime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team runtime</label>
    <referenceTo>n2de__Team_runtime__c</referenceTo>
    <relationshipLabel>Distribution Teams</relationshipLabel>
    <relationshipName>Team_runtime</relationshipName>
    <type>Lookup</type>
</CustomField>