unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Total_actions_tracked__c.field-meta.xml
<CustomField>
    <fullName>n2de__Total_actions_tracked__c</fullName>
    <label>Total actions tracked</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>