unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Track_actions_any_user__c.field-meta.xml
<CustomField>
    <fullName>n2de__Track_actions_any_user__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Action tracking is not restricted to the assigned user and will be tracked when any user performs the action.</inlineHelpText>
    <label>Track actions from any user</label>
    <type>Checkbox</type>
</CustomField>