unpackaged/main/default/objects/n2de__Team__c/fields/n2de__Weighting_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Weighting_type__c</fullName>
    <inlineHelpText>Type of weighting to use for this team</inlineHelpText>
    <label>Weighting type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Tag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>