unpackaged/main/default/objects/n2de__Team__c/listViews/n2de__All.listView-meta.xml
<ListView>
    <fullName>n2de__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>